# slint-gui-calculator

./: Cargo.toml
src/: main.rs
ui/: app-window.slint
wix/: main.wxs
